--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,6 +11,12 @@
         {% endblock %}
     </head>
     <body>
+        {% if app.user %}
+            Hello {{ app.user.username }} <a href="{{ path('app_logout') }}">logout</a>
+        {% else %}
+            <a href="{{ path('app_login') }}">login</a>
+        {% endif %}
+
         {% block body %}{% endblock %}
         {% block javascripts %}
             {{ encore_entry_script_tags('app') }}
