--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,6 +1,20 @@
 @import "~bootstrap/scss/bootstrap";
 
 body {
-    background-color: white;
+    text-align: center;
+}
+
+.wrapper {
+    margin: 80px auto;
+    max-width: 1000px;
+    text-align: left;
+}
+
+.user-login {
+    float: right;
+}
+
+.welcome-title {
+    font-size: 4em;
 }
 
