--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -3,9 +3,11 @@
 {% block user_login %}{% endblock %}
 
 {% block body %}
-    <h1 class="welcome-title">Welcome to K75 Lugal!</h1>
-    <a class="login-with-discord" href="{{ path('connect_discord_start') }}">
-        <span class="login-with">login with</span>
-        <img src="{{ asset('images/discord.png') }}" alt=" Discord" />
-    </a>
+    <div class="welcome">
+        <h1 class="welcome-title">Welcome to K75 Lugal!</h1>
+        <a class="login-with-discord" href="{{ path('connect_discord_start') }}">
+            <span class="login-with">LOGIN WITH</span>
+            <img src="{{ asset('images/discord.png') }}" alt=" Discord" />
+        </a>
+    </div>
 {% endblock %}
