--- a/templates/indexLugalMember.html.twig
+++ b/templates/indexLugalMember.html.twig
@@ -1,5 +1,6 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Lugal Management</h1>
+    <h1>Lugal Member Search</h1>
+    <input class="member-search" type="text" />
 {% endblock %}
