--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,7 +11,7 @@
         {% endblock %}
     </head>
     <body>
-        <div class="wrapper">
+        <div class="wrapper container">
             {% block user_login %}
                 <div class="user-login">
                 {% if app.user %}
