style search results with display status

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,5 +1,5 @@
 @import "~bootstrap/scss/bootstrap";
-@import "_variables.scss";
+@import "_variables";
 
 body {
     text-align: center;
@@ -15,27 +15,5 @@ body {
     float: right;
 }
 
-.welcome {
-    text-align: center;
-}
-
-.welcome-title {
-    font-size: 4em;
-}
-
-a.login-with-discord, a:active.login-with-discord, a:hover.login-with-discord,  a:visited.login-with-discord {
-    display: block;
-    width: 490px;
-    text-decoration: none;
-    color: $blurple;
-    margin: 40px auto;
-    padding: 10px;
-    border: 5px solid $blurple;
-    border-radius: 20px;
-    font-size: 2em;
-    font-weight: 600;
-}
-
-.login-with-discord img {
-    width: 200px;
-}
+@import "pages/welcome";
+@import "pages/search";
