--- a/templates/indexLugalMember.html.twig
+++ b/templates/indexLugalMember.html.twig
@@ -2,65 +2,5 @@
 
 {% block body %}
     <h1>Lugal Member Search</h1>
-    <form>
-        <div class="input-group mb-3">
-            <input
-                type="text"
-                name="search"
-                value="{{ searchTerm }}"
-                class="form-control-lg"
-                placeholder="Player name"
-                aria-label="Player name"
-                aria-describedby="button-search"
-            />
-            <button class="btn btn-outline-secondary" type="submit" id="button-search">Search</button>
-        </div>
-    </form>
-
-    {% if searchResult is not empty %}
-        {% for gov in searchResult.governors %}
-            <div class="search-gov card status-{{ gov.displayStatus }} mb-3">
-                <div class="card-header">
-                    <h5 class="search-pill">
-                        <a href="{{ path('governor', {id: gov.id}) }}">
-                            {{ gov.name }}
-                            <span class="gov-id pill-border">{{ gov.id }}</span>
-                        </a>
-                    </h5>
-                    {% if gov.alliance %}
-                    <div class="search-pill pill-border">
-                        <span class="pill-label">{{ gov.alliance }}</span>
-                    </div>
-                    {% endif %}
-                    <div class="search-pill pill-border">
-                        <span class="pill-label">Power</span> {{ gov.power|number_format }}
-                    </div>
-                </div>
-                <div class="card-body">
-                    <div class="search-pill pill-border">
-                        <span class="pill-label">Kills</span> {{ gov.kills|number_format }}
-                    </div>
-                    <div class="search-pill pill-border">
-                        <span class="pill-label">Deads</span> {{ gov.deads|number_format }}
-                    </div>
-                    <div class="search-pill pill-border">
-                        <span class="pill-label">Helps</span> {{ gov.helps|number_format }}
-                    </div>
-                    <div class="search-pill pill-border">
-                        <span class="pill-label">RSS Assistance</span> {{ gov.rssAssistance|number_format }}
-                    </div>
-                    {% if gov.kvk4Ranking %}
-                    <div class="search-pill pill-border">
-                        <span class="pill-label">KVK 4 Rank</span> {{ gov.kvk4Ranking }}
-                    </div>
-                    {% endif %}
-                    {% if gov.kvk5Ranking %}
-                    <div class="search-pill pill-border">
-                        <span class="pill-label">KVK 5 Rank</span> {{ gov.kvk5Ranking }}
-                    </div>
-                    {% endif %}
-                </div>
-            </div>
-        {% endfor %}
-    {% endif %}
+    {{ include('search/memberSearch.html.twig') }}
 {% endblock %}
