--- a/templates/governor/officer_actions.html.twig
+++ b/templates/governor/officer_actions.html.twig
@@ -1,10 +1,8 @@
 <div class="card officer-actions mb-3">
     <div class="card-header">
-        <h5>
-            Officer Actions
-        </h5>
+        <h5>Officer Actions</h5>
     </div>
     <div class="card-body">
-        <a class="btn btn-primary" href="{{ path('governor_add_note', {'id': gov.id}) }}">Add Note</a></p>
+        <a class="btn btn-primary" href="{{ path('governor_add_note', {'id': gov.id}) }}">Add Note</a>
     </div>
 </div>
