--- a/templates/scribe/detail.html.twig
+++ b/templates/scribe/detail.html.twig
@@ -6,21 +6,28 @@
     <div class="card-header">
         <h2>Snapshot: {{ snapshotInfo.name }}</h2>
     </div>
-    <div class="card-body">
-        <h3>Incomplete</h3>
-        {% for snapshot in incompleteSnapshots %}
-            <p>
-                {{ snapshot.governor.name }}
-                <a href="#" class="btn btn-primary">Complete</a>
-            </p>
-        {% endfor %}
-        <h3>Missing</h3>
-        {% for governor in missingGovs %}
-            <p>
-                {{ governor.name }}
-                <a href="#" class="btn btn-primary">Create</a>
-            </p>
-        {% endfor %}
+    <div class="card-body d-flex flex-row">
+        <div class="p-2 pl-5">
+            <h3>Incomplete</h3>
+            {% for govSnapshot in incompleteSnapshots %}
+                <p>
+                    {{ govSnapshot.governor.name }}
+                    <a href="{{ path('scribe_gov_snapshot_edit', { id: govSnapshot.id }) }}" class="btn btn-primary btn-sm">Complete</a>
+                </p>
+            {% endfor %}
+        </div>
+        <div class="p-2 pl-5">
+            <h3>Missing</h3>
+            {% for governor in missingGovs %}
+                <p>
+                    {{ governor.name }}
+                    <a
+                        href="{{ path('scribe_gov_snapshot_create', { govId: governor.id, snapshotUid: snapshotInfo.uid }) }}"
+                        class="btn btn-primary btn-sm"
+                    >Create</a>
+                </p>
+            {% endfor %}
+        </div>
     </div>
 </div>
 {% endblock %}
