--- a/templates/indexAnonymous.html.twig
+++ b/templates/indexAnonymous.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
     <h1>Thanks for your interest!</h1>
-    <p>This site is currently only for K75 Lugal members.</p>
+    <p>This site is only for kingdom members.</p>
 
     {% if profileClaim %}
         <p>You have submitted your profile claim, please wait for an officer to verify you.</p>
