--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -2,9 +2,12 @@
 
 {% block user_login %}{% endblock %}
 
+{% block hero %}
+    <h1 class="welcome-title">Welcome to {{ site_title }}!</h1>
+{% endblock %}
+
 {% block body %}
     <div class="welcome">
-        <h1 class="welcome-title">Welcome to K75 Lugal!</h1>
         <a class="login-with-discord" href="{{ path('connect_discord_start') }}">
             <span class="login-with">LOGIN WITH</span>
             <img src="{{ asset('images/discord.png') }}" alt=" Discord" />
