--- a/templates/indexKingdomMember.html.twig
+++ b/templates/indexKingdomMember.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Lugal Member Search</h1>
+    <h1>Player Search</h1>
     {{ include('search/memberSearch.html.twig') }}
 {% endblock %}
