make things pretty

--- a/assets/styles/_variables.scss
+++ b/assets/styles/_variables.scss
@@ -1,5 +1,8 @@
 $blurple: #7289DA;
 
-$status-active: #00FF00;
+$hero-background: #002B8F;
+$hero-text: #FFFFFF;
+
+$status-active: #00A388;
 $status-inactive: #EEEEEE;
 $status-blacklisted: #FF4444;
