--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -2,9 +2,9 @@
 
 {% block user_login %}{% endblock %}
 
-{% block hero %}
-    <h1 class="welcome-title">Welcome to {{ site_title }}!</h1>
-{% endblock %}
+{% block hero_class %}large{% endblock %}
+
+{% block page_title %}{% endblock %}
 
 {% block body %}
     <div class="welcome">
