--- a/templates/indexAnonymous.html.twig
+++ b/templates/indexAnonymous.html.twig
@@ -1,7 +1,8 @@
 {% extends 'base.html.twig' %}
 
+{% block page_title %}Thanks for your interest!{% endblock %}
+
 {% block body %}
-    <h1>Thanks for your interest!</h1>
     <p>This site is only for kingdom members.</p>
 
     {% if profileClaim %}
