--- a/templates/indexKingdomMember.html.twig
+++ b/templates/indexKingdomMember.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 
+{% block page_title %}{% endblock %}
+
 {% block body %}
-    <h1>Player Search</h1>
     {{ include('search/memberSearch.html.twig') }}
 {% endblock %}
