--- a/templates/links.html.twig
+++ b/templates/links.html.twig
@@ -1,7 +1,10 @@
+{% if is_granted('ROLE_OFFICER') %}
+    <a href="{{ path('officer_index') }}">Officer Corner</a> |
+{% endif %}
 {% if is_granted('ROLE_SCRIBE') %}
     <a href="{{ path('scribe_index') }}">Scribe Corner</a> |
 {% endif %}
 {% if is_granted('ROLE_ADMIN') %}
     <a href="{{ path('app_admin_dashboard_index') }}">Admin</a> |
 {% endif %}
-<a href="{{ path('app_logout') }}">logout</a>
+<a href="{{ path('app_logout') }}">Logout</a>
