fix search to left join alliance, add drop shadow

--- a/templates/search/searchResultGov.html.twig
+++ b/templates/search/searchResultGov.html.twig
@@ -1,4 +1,4 @@
-<div class="search-gov card status-{{ gov.displayStatus }} mb-3">
+<div class="search-gov card shadow-sm status-{{ gov.displayStatus }} mb-3">
     <div class="card-header">
         <h3 class="search-header float-left">
             <a href="{{ path('governor', {id: gov.id}) }}">{{ gov.name }}</a>
